<resources>
    <string name="site">www.azilen.com</string>
    <string name="app_name">Waiter Pad</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="memory_message">Could not load the menu because of low memory!</string>
    <string name="image">Image</string>
    <string name="change_waiter_code">Change Waiter Code</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="show_suggestions">Show Suggestions</string>
    <string name="back_end_settings">Configure services</string>
    <string name="force_sync">Force Sync</string>
    <string name="send_log">Send Log File</string>
    <string name="language">Language</string>
    <string name="organize_menu">Organize Menu</string>
    <string name="section_selection">Select floor plan</string>
    <string name="exit">Exit</string>
    <string name="search_item">Search Item</string>
    <string name="arrow">></string>
    <string name="myorders">My Orders</string>
    <string name="m">M</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="downloading_menu">Downloading menu ... </string>
    <string name="initializing">Initializing ...</string>
    <string name="sync_menu">Sync menu</string>
    <string name="refreshing_data">Refreshing data ... </string>
    <string name="notification_center">Notification center</string>
    <string name="one_two_three">123</string>
    <string name="close">Close</string>
    <string name="order_updated">Order updated successfully!</string>
    <string name="order_checked_out">Order checkout successful!</string>
    <string name="guest_one_only">You cannot delete the guest!</string>
    <string name="order_added">Order placed successfully!</string>
    <string name="select_category">Select Category</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="min_modifiers_to_select">You must select </string>
    <string name="modifiers_to_select">You can only select </string>
    <string name="modifiers_last"> modifier(s) </string>
    <string name="group">group !</string>
    <string name="under">under</string>
    <string name="item_cannot_be_deleted">Item cannot be deleted as the order has been sent!</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="guests">Guest(s)</string>
    <string name="guest">Guest</string>
    <string name="go_to_order">Goto Order</string>
    <string name="table_title">Table</string>
    <string name="settings_label">Modify the configurations settings below</string>
    <string name="order_label">Order : </string>
    <string name="checkout">Checkout</string>
    <string name="apply_modifiers_on">Apply modifiers on: </string>
    <string name="please_press_back_again">Please press again to exit!</string>
    <string name="cannot_delete_guest">Guest cannot be deleted as the order has been sent!</string>
    <string name="sync_menu_ask">Would you like to sync the menu for the current section?</string>
    <string name="no_ordered_items">No items have been ordered!</string>
    <string name="order_loss_message">You will lose your order if you proceed. Please confirm.</string>
    <string name="no_results">No Results</string>
    <string name="fractional_limit_value">Please enter a fractional dish value less than equal to 100!</string>
    <string name="please_enter_a_quantity">Please enter a quantity!</string>
    <string name="please_enter_a_valid_quantity">Please enter a valid quantity!</string>
    <string name="my_tables">My Tables</string>
    <string name="all_tables">All Tables</string>
    <string name="active_tables">Active Tables</string>
    <string name="bill_request_tables">Bill Request Tables</string>
    <string name="orderstatus_neworder">New Order</string>
    <string name="orderstatus_billrequested">Bill Requested</string>
    <string name="orderstatus_deleted">Deleted</string>
    <string name="orderstatus_closed">Closed</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="update">update</string>
    <string name="quantity">Quantity</string>
    <string name="fraction">Fraction</string>
    <string name="place_order">Place Order</string>
    <string name="pending">Pending </string>
    <string name="language_selection">Language selection</string>
    <string name="home"> Home </string>
    <string name="orders">Orders</string>
    <string name="tables">Tables</string>
    <string name="notifications">Notifications</string>
    <string name="bill_split_message">Would you like to bill split ?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="enable_notifications">Notifications</string>
   	<string name="table_name">Table Name</string>
   	<string name="waiter_name">Waiter Name</string>
    <string name="item_name">Item Name</string>
    <string name="time">13:14</string>
    <string name="order_now">Order Now</string>
    <string name="profile">Profile</string>
    <string name="current_orders">Current Orders</string>
    <string name="promos">Promos</string>
    <string name="settings">Settings</string>
    <string name="add_guest">Add new guest</string>
    <string name="add_new_order">Add new order</string>
    <string name="menu">Menu</string>
    <string name="new_order">New Order</string>
    <string name="featured_items">Featured Items</string>
    <string name="discount">Discount:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total</string>
    <string name="table_number">4</string>
    <string name="room_name">Room Name</string>
    <string name="total_order">1234</string>
    <string name="allow_fractions">Allow fractions</string>
    <string name="enter_kitchen_note">Enter kitchen note</string>
   	<string name="item_details">Item details will come here</string>
   	<string name="header_name">Header comes here!</string>
   	<string name="modifier">Modifiers</string>
   	<string name="choose">Select atleast </string>
   	<string name="out_of">out of</string>
   	<string name="ip_address">Ip Address</string>
   	<string name="port">Port</string>
   	<string name="save">Save</string>
   	<string name="cancel">Cancel</string>
   	<string name="ip_address_hint">255.255.255.255</string>
   	<string name="logout">Logout</string>
   	<string name="lock">Lock</string>
   	<string name="change_waiter">Change Waiter</string>
   	<string name="open_orders">Open orders</string>
   	<string  name="section_selected">Selected section</string>
   	<string name="language_selected">Selected language</string>
   	<string name="non_group_modifiers">Non-group modifiers</string>
   	<string name="enter_seat_number">Please enter the seat number or car number</string>
   	<string name="login">Login</string>
   	<string name="reset">Reset</string>
   	<string name="OK">OK</string>
   	<string name="quick_sync">Quick Sync</string>
   	<string name="filter">Filter</string>
   	<string name="order">Order</string>
   	<string name="pin">Pin</string>
   	<string name="send_order">Send Order</string>
   	<string name="request_bill">Request Bill</string>
   	<string name="add_item">Add Item</string>
   	<string name="search">Search Order</string>
   	<string name="counter">1</string>
   	<string name="tap_to_refresh">Tap to refresh</string>
   	<string name="add_kitchen_note">Add Kitchen Note</string>
   	<string name="add_modifier">Add Modifier</string>
   	<string name="enter_pin_to_logout">Enter pin to logout</string>
   	<string name="update_order">Update Order</string>
   	<string name="pay_by_card">Pay by Card</string>
   	<string name="bill">Bill</string>
   	<string name="enter_port">Please enter the port number!</string>
   	<string name="enter_valid_port">Port number must be between 0 and 65535!</string>
   	<string name="enter_ip">Please enter the IP address!</string>
   	<string name="enter_values">Please enter fields marked as mandatory</string>
   	<string name="valid_ip">Please enter a valid IP Address!</string>
   	<string name="server_unreachable">The server cannot be reached!</string>
   	<string name="invalid_user">Incorrect PIN entered!</string>
   	<string name="incorrect_pin_size">Please enter atleast 4 digits!</string>
   	<string name="select_section_message">Please select the section!</string>
   	<string name="enter_valid_pin">Please enter a valid pin!</string>
   	<string name="enter_valid_exit_pin">Please enter a valid exit pin!</string>
   	<string name="device_not_registered">Device is not registered!</string>
   	<string name="english_language">English</string>
   	<string name="russian_language">Russian</string>
   	<string name="waiterpadservice">Waiter Pad Service</string>
   	<string name="table_list">Table List</string>
   	<string name="order_list">Order List</string>
   	<string name="user_profile">User Profile</string>
   	<string name="loading">Loading ...</string>
   	<string name="select_section">Select Section</string>
   	<string name="change_config_settings"><u>Change configuration settings</u></string>
   	<string name="order_needs_to_be_there">There must be an order placed before sent!</string>
   	<string name="delimiter">/</string>
   	<string name="http">http://</string>
   	<string name="colon">:</string>
   	<string name="WEBSERVICE_NAME">IIKO_WCF_Service</string>
   	<string name="GETCURRENT_ORDERS">GetCurrentOrderList</string>
   	<string name="LOGIN">GetAuthenticateCredentials</string>
   	<string name="REGISTER_DEVICE">RegisterDevice</string>
   	<string name="SEND_ORDER">PutNewOrder</string>
   	<string name="SEND_ORDER_TO_KITCHEN">SendPrintRequest</string>
   	<string name="GET_SECTIONWISE_TABLE">GetSectionWisetableList</string>
   	<string name="GET_MENU">GetMenu</string>
   	<string name="ADD_NEW_ITEM">AddNewItemInOrder</string>
   	<string name="ADD_NEW_ITEM_LIST">AddNewItemInOrderList</string>
   	<string name="SYNC_STATUS">SyncOrder</string>
   	<string name="GET_LANGUAGES">GetLanguage</string>
   	<string name="LOGOUT">Logout</string>
   	<string name="CHECKOUT">Checkout</string>
   	<string name="CHECKOUT_LIST">CheckoutList</string>
   	<string name="UPLOAD_LOG">UploadLog</string>
   	<string name="GET_MENU_ALL">GetAllMenu</string>
   	<string name="EDIT_ORDER">EditOrder</string>
   	<string name="no_ordered_items_for_all_guests">Not all guests have ordered items!</string>
   	<string name="DEVICE_REGISTERED">Device is already registered!</string>
   	<string name="LICENCE_LIMIT_EXCEEDED">License limited has exceeded!</string>
   	<string name="order_number">Order </string>
   	<string name="order_status_message">has been updated!</string>
   	<string name="currancy_symbol">$</string>
   	<string name="currancy_location">TRUE</string>
   	<string name="time_for_gettings_all_orders">2000</string>
   	<string name="short_vibration">0</string>
   	<string name="normal_vibration">1</string>
   	<string name="long_vibration">2</string>
   	<string name="small_font">0</string>
   	<string name="medium_font">1</string>
   	<string name="large_font">2</string>
   	<string name="long_vibration_pattern">1000, 1500, 1000, 1500</string>
   	<string name="short_vibration_pattern">100, 200, 100, 200</string>
   	<string name="normal_vibration_pattern">100, 1000, 100, 1000</string>
   	<string name="broadcast_notification_update">Notification Update</string>
   	<string name="broadcast_table_update">Table Update</string>
   	<string name="broadcast_order_update">Order Update</string>
   	<string name="broadcast_myorders_update">MyOrders Update</string>
   	<string name="broadcast_tableorders_update">TableOrders Update</string>
   	<string name="exit_pin">1A2B</string>
   	<string name="table_header">Table</string>
   	<string name="section_header">Section</string>
</resources>