<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	<LinearLayout
	    android:id="@+id/lnrButtonsTableList"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <Button
	        android:id="@+id/btnMyTables"
	        android:layout_width="wrap_content"
	        android:layout_height="80dp"
	        android:layout_weight="0.5"
	        android:background="@drawable/button_shape_bottom"
	        android:textSize="16sp"
	        android:onClick="buttonClicked"
	        android:text="@string/my_tables"/>
	    <Button
	        android:id="@+id/btnActiveTables"
	        android:layout_width="wrap_content"
	        android:layout_height="80dp"
	        android:layout_weight="1"
	        android:background="@drawable/button_shape_bottom"
	        android:textSize="16sp"
	        android:onClick="buttonClicked"
	        android:text="@string/active_tables"/>
	    <Button
	        android:id="@+id/btnBillRequestTables"
	        android:layout_width="wrap_content"
	        android:layout_height="80dp"
	        android:layout_weight="1"
	        android:background="@drawable/button_shape_bottom"
	        android:textSize="16sp"
	        android:onClick="buttonClicked"
	        android:text="@string/bill_request_tables"/>
	    <Button
	        android:id="@+id/btnAllTables"
	        android:layout_width="wrap_content"
	        android:layout_height="80dp"
	        android:layout_weight="0.5"
	        android:background="@drawable/button_shape_bottom"
	        android:textSize="16sp"
	        android:onClick="buttonClicked"
	        android:text="@string/all_tables"/>
	</LinearLayout>
</RelativeLayout>
