<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/relButtonsFooter"
    android:background="@color/bg_color"
    android:layout_gravity="bottom"
    android:layout_height="75dp">
    <Button 
        android:id="@+id/btnAddFooter"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/plus"
        android:textSize="35sp"
       	style="@style/txtIndividualStyle"
        android:layout_alignParentLeft="true"
        android:textColor="@color/order_footer_textcolor"
        android:background="@drawable/button_selector"/>
    <Button 
        android:id="@+id/btnMinusFooter"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/minus"
        style="@style/txtIndividualStyle"
        android:textSize="35sp"
        android:textColor="@color/order_footer_textcolor"
        android:layout_toRightOf="@+id/btnAddFooter"
        android:layout_toLeftOf="@+id/btnDeleteFooter"
        android:background="@drawable/button_selector"/>
    <ImageButton
        android:id="@+id/btnDeleteFooter"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text=""
        style="@style/txtIndividualStyle"
        android:textSize="45sp"
        android:clickable="true"
        android:contentDescription="@string/image"
        android:src="@drawable/remove_frm_cart_red"
        android:layout_toLeftOf="@+id/btnQuantityFraction"
        android:background="@drawable/button_selector"/>
    <Button 
        android:id="@+id/btnQuantityFraction"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/one_two_three"
        android:contentDescription="@string/image"
        style="@style/txtIndividualStyle"
        android:textSize="25sp"
        android:textColor="@color/order_footer_textcolor"
        android:layout_toLeftOf="@+id/btnSendOrderFooter"
        android:background="@drawable/button_selector"/>
    <Button 
        android:id="@+id/btnSendOrderFooter"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/send_order"
        style="@style/txtIndividualStyle"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:textColor="@color/order_footer_textcolor"
        android:background="@drawable/button_selector"/>
</RelativeLayout>
