<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@android:color/white">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/txtEnterPinToLogout"
	        android:padding="10dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center"
	        style="@style/txtIndividualStyle"
	        android:textSize="18sp"
	        android:text="@string/enter_pin_to_logout"/>
	    
	    <EditText 
	        android:id="@+id/editPinToExit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="4dp"
	        android:hint="@string/enter_pin"
	        android:password="true"
	        android:inputType="textPassword"
	        android:background="@drawable/edit_shape"/>
	    
	    <Button 
	        android:id="@+id/btnCloseLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/cancel"
	        android:textColor="@color/white"
	        android:background="@drawable/button_shape_selector"/>
	</LinearLayout>
</RelativeLayout>
