<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content">
    <RelativeLayout 
        android:id="@+id/relHeader"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/txtIndividualStyle"
            android:id="@+id/txtHeaderAlertDriveThru"
            android:padding="@dimen/space"/>
    </RelativeLayout>
	<RelativeLayout 
	    android:id="@+id/relDetailsDriveThru"
	    android:layout_below="@+id/relHeader"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/txtLiterature"
	        android:layout_width="400dp"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/space"
	        android:text="@string/enter_seat_number"
	        style="@style/txtIndividualStyle"></TextView>
	    <EditText 
	    	android:layout_width="400dp"
	     	android:layout_height="wrap_content"
	        android:id="@+id/editCarOrSeatNo"
	        android:hint=""
	        android:layout_below="@+id/txtLiterature"
	        android:layout_marginTop="10dp"
	        android:layout_marginRight="@dimen/space"
	        android:layout_marginLeft="@dimen/space"
	        android:inputType="text"
	        android:background="@drawable/edit_shape"/>"
	</RelativeLayout>
	<LinearLayout 
	    android:id="@+id/lnrButtons"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_below="@+id/relDetailsDriveThru"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/btnCancelDriveThru"
	        android:layout_width="0dip"
	        android:layout_marginLeft="10dp"
	        android:text="@string/cancel"
	        style="@style/txtIndividualStyle"
	        android:layout_weight="0.5"
	        android:background="@drawable/button_shape"
	        android:layout_height="@dimen/button_height"/>
	    <Button 
	        android:id="@+id/btnSaveDriveThru"
	        android:layout_width="0dip"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="0.5"
	        android:text="@string/save"
	        style="@style/txtIndividualStyle"
	        android:background="@drawable/button_shape"
	        android:layout_height="@dimen/button_height"/>
	</LinearLayout>
</RelativeLayout>