<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relLayerMenuScreenIndi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<TextView 
		    android:id="@+id/txtTableNumberMenuScreen"
		    android:layout_width="60dp"
		    android:text="@string/table_number"
		    android:layout_marginLeft="5dp"
		    android:padding="10dp"
		    android:layout_height="wrap_content"
		    style="@style/txtIndividualStyle"/>
		<LinearLayout 
		    android:id="@+id/tabledetails"
		    android:layout_width="fill_parent"
		    android:layout_marginLeft="10dp"
		    android:layout_toRightOf="@+id/txtTableNumberMenuScreen"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView
		        android:id="@+id/txtRoomNameMenuScreen"
		        style="@style/txtIndividualStyle"
		        android:layout_width="0dip"
		        android:layout_weight="0.75"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:text="@string/room_name" />
		    <TextView
		        android:id="@+id/txtTotalOrderMenuScreen"
		        style="@style/txtIndividualStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:paddingLeft="10dp"
		        android:layout_gravity="right"
		        android:gravity="right"
		        android:paddingRight="15dp"
		        android:layout_marginRight="5dp"
		        android:text="@string/total_order" />
		</LinearLayout>
    </RelativeLayout>
</RelativeLayout>