<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space"
    android:background="@color/white">
    <RelativeLayout 
        android:id="@+id/relHeader"
        android:layout_width="fill_parent"
        android:background="@color/header"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView 
            android:id="@+id/txtHeaderKitchenNote"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            style="@style/txtIndividualStyle"
            android:padding="@dimen/space"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/header_name"
            android:textColor="@color/white"/>
        	<ImageView 
            android:id="@+id/imgCloseNote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/image"
            android:src="@drawable/no"/>
        </LinearLayout>
    </RelativeLayout>
	<EditText 
	    android:id="@+id/editKitchennote"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/relHeader"
	    android:hint=""
	    android:background="@drawable/edit_shape"
	    android:maxLines="20"
	    android:gravity="top"
	    android:layout_marginTop="10dp"
	    android:minLines="10"
	    android:inputType="textMultiLine"/>    
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/editKitchennote"
	    android:layout_marginTop="10dp">
	    <LinearLayout
	        android:id="@+id/lnrButtons"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <Button 
	        android:id="@+id/btnResetNote"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:background="@drawable/button_shape_selector"
	        android:text="@string/reset"
	        android:layout_weight="1"
	        style="@style/txtIndividualStyle"
	        android:textColor="@color/white"/>
	    <Button 
	        android:id="@+id/btnSaveNote"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:background="@drawable/button_shape_selector"
	        android:layout_marginLeft="@dimen/space"
	        android:text="@string/save"
	        android:layout_weight="1"
	        style="@style/txtIndividualStyle"
	        android:textColor="@color/white"/>
	    </LinearLayout>
	</RelativeLayout>
</RelativeLayout>
